--- a/views/square.erb
+++ b/views/square.erb
@@ -10,7 +10,7 @@
     <form action="/square/results">
       <label for ="square">Enter a number </label>
       <br>
-      <input type="text" id="square" placeholder="What number do you want to take the square of?"></input>
+      <input type="text" id="square" placeholder="What number do you want to take the square of?" name="number"></input>
       <br>
       <button>Calculate square</button>
     </form>
