--- a/views/random.erb
+++ b/views/random.erb
@@ -14,7 +14,7 @@
       <label for ="maximum">Maximum</label>
       <input type="maximum" id="square" placeholder="E.g. 1.5" name="max"></input>
       <br>
-      <button>Pick a random number</button>
+      <button>Pick random number</button>
     </form>
   
   
